# multiple-ghc-versions

./: README.md
a/: a.cabal  default.nix
a/nix/: contents.nix  overlay.nix  overlays.nix  sources.json
a/src/: A.hs
b/: b.cabal  default.nix  release.nix
b/nix/: contents.nix  overlay.nix  overlays.nix  sources.json
b/src/: B.hs
